<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_lightbluesgrey"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context="com.CBS.MyCompanion.ProfHelpFragment">

    <!--//Text that will be displayed in middle of screen-->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:layout_marginTop="75dp"
                android:gravity="center"
                android:text="Phone Numbers to Seek Professional Help"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingBottom="40dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Crisis"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Crisis"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="115dp"
                    android:text="@string/CrisisNum"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/suicide"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Suicide"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:text="@string/SuicideNum"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/veterans"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Veterans"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:text="@string/VeteransNum"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/veterans2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/veterans"
                    android:text="@string/Veterans2"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="125dp"
                    android:text="@string/VeteransText"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/child"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Child"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:text="@string/ChildNum"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/domestic"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Domestic"
                    android:textColor="@color/black" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:text="@string/DomesticNum"
                    android:textColor="@color/black" />
                </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</RelativeLayout>

