<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blues"
    tools:context=".InputUserData">

    <androidx.cardview.widget.CardView
        android:layout_margin="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:background="#fff" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="22dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_form_title"
                android:textSize="36sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:paddingTop="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_form_firstName"
                android:textSize="22sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/activity_inputUserData_firstName" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_form_lastName"
                android:textSize="22sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/activity_inputUserData_lastName" />

            <!-- Create functionality to add a birth date -->

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_form_ctnButton"
                android:textSize="22sp"
                android:id="@+id/activity_inputUserData_ctnButton"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>